--- a/service.html
+++ b/service.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Header</title>
 </head>
 <body>
-    <h1>Home Page for CC10 learning</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda, corporis.</p>
+    <h1>Header</h1>
 </body>
 </html>
